# GrayScale

./: CMakeLists.txt
src/: main.cpp
